[FIX] Remove visual gap between horizontal CSS menu top item and dropdown and other improvements in tiki-top.

--- a/mods/trunk/themes/mittwoch_tiki_5/styles/mittwoch.css
+++ b/mods/trunk/themes/mittwoch_tiki_5/styles/mittwoch.css
@@ -436,6 +436,7 @@ div#sitelocbar {
 	font-weight: bold;
 	padding-left: 0;
 	padding-right: 0;
+	padding-bottom: 10px;
 	margin: 0;
 	text-align: center;
 	line-height: 37px;
